# rust-crud

./: .env  .gitignore  Cargo.toml  Makefile  README.md
client/: index.html  style.css
db/: schema.hcl
src/: blog_post.rs  config.rs  credentials.rs  db.rs  main.rs
