[package]
name = "rust-crud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0.171", features = ["derive"] }
sqlx = { version = "0.7", features = [ "runtime-tokio" ] }

